2 метод, убрал FnDispatcherHelper заменив его лямбда выражениями, еще + 1 using, выгрузил пока DinamicMultimetod он не нужен так как без трамплинной функции, добавил FncDispatcher

--- a/MultiFunctions/MultiFunctions/MultiFunctions.vcxproj
+++ b/MultiFunctions/MultiFunctions/MultiFunctions.vcxproj
@@ -20,7 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ContainerMap.cpp" />
-    <ClCompile Include="DinamicMultimethod.cpp" />
+    <ClCompile Include="FncDispatcher.cpp" />
     <ClCompile Include="FunctorDispatcher.cpp" />
     <ClCompile Include="MyMap.cpp" />
     <ClCompile Include="StaticMultimethod.cpp" />
