закоммитил пока вызов (не собирается) и добавил описание(упрощение шаблонов при мультиметодах)

--- a/MultiFunctions/MultiFunctions/MultiFunctions.vcxproj
+++ b/MultiFunctions/MultiFunctions/MultiFunctions.vcxproj
@@ -35,7 +35,9 @@
   <ItemGroup>
     <ClInclude Include="Asteroid.h" />
     <ClInclude Include="Caller.h" />
+    <ClInclude Include="Collide.h" />
     <ClInclude Include="ContainerMap.h" />
+    <ClInclude Include="Conversation.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="game_hierarchy.hpp" />
     <ClInclude Include="Loki\AbstractFactory.h" />
