вынес код в отдельную папку

--- a/MultiFunctions/MultiFunctions/MultiFunctions.vcxproj
+++ b/MultiFunctions/MultiFunctions/MultiFunctions.vcxproj
@@ -38,6 +38,7 @@
     <ClInclude Include="Collide.h" />
     <ClInclude Include="ContainerMap.h" />
     <ClInclude Include="Conversation.h" />
+    <ClInclude Include="DinamicMultiMethod.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="game_hierarchy.hpp" />
     <ClInclude Include="Loki\AbstractFactory.h" />
@@ -68,9 +69,13 @@
     <ClInclude Include="Loki\VC_Alignment.h" />
     <ClInclude Include="Loki\Visitor.h" />
     <ClInclude Include="MyMap.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="SpaceShip.h" />
     <ClInclude Include="SpaceStantion.h" />
     <ClInclude Include="typecollection.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="MultiFunctions.rc" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{28AC613A-930F-435D-A75E-6699D1B99324}</ProjectGuid>
