--- a/MultiFunctions/MultiFunctions/MultiFunctions.vcxproj
+++ b/MultiFunctions/MultiFunctions/MultiFunctions.vcxproj
@@ -76,6 +76,7 @@
     <ClInclude Include="resource.h" />
     <ClInclude Include="Shape.h" />
     <ClInclude Include="ShapeDrawing.h" />
+    <ClInclude Include="ShapeMetricVisitor.h" />
     <ClInclude Include="SpaceShip.h" />
     <ClInclude Include="SpaceStantion.h" />
     <ClInclude Include="ThinBrush.h" />
@@ -88,6 +89,7 @@
   <ItemGroup>
     <None Include="ClassDiagram1.cd" />
     <None Include="Drawing.cd" />
+    <None Include="MetricVisitors.cd" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{28AC613A-930F-435D-A75E-6699D1B99324}</ProjectGuid>
