перенес DinamicMultiMethod. SimpleMultimetod только поместил в Фильтр MultiLoki т.к. там были какие-то изменения

--- a/MultiGraficSolution/ConsoleApplication1/ConsoleApplication1.vcxproj
+++ b/MultiGraficSolution/ConsoleApplication1/ConsoleApplication1.vcxproj
@@ -114,6 +114,7 @@
     <ClInclude Include="library\Loki\AssocVector.h" />
     <ClInclude Include="library\Loki\ContainerMap.h" />
     <ClInclude Include="library\Loki\DataGenerators.h" />
+    <ClInclude Include="library\Loki\DinamicMultiMethod.h" />
     <ClInclude Include="library\Loki\EmptyType.h" />
     <ClInclude Include="library\Loki\ExecuteSimpleMethod.h" />
     <ClInclude Include="library\Loki\Factory.h" />
